<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.ac.ebi.eva</groupId>
    <artifactId>eva-accession</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>eva-accession</name>
    <url>http://github.com/EBIvariation/eva-accession</url>

    <modules>
        <module>eva-accession-core</module>
        <module>eva-accession-ws</module>
        <module>eva-accession-pipeline</module>
        <module>eva-accession-release</module>
        <module>eva-remapping-get-source</module>
        <module>eva-accession-deprecate</module>
        <module>eva-accession-import-dbsnp2</module>
        <module>eva-accession-clustering</module>
        <module>eva-remapping-ingest</module>
    </modules>

    <properties>
        <revision>1.0.1</revision>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <variation-commons-version>1.0.0</variation-commons-version>
        <accession-commons-version>1.0.1</accession-commons-version>
        <samtools-htsjdk-version>4.0.0</samtools-htsjdk-version>
        <eva-metrics-version>1.0.0</eva-metrics-version>
        <springdoc.version>2.8.17</springdoc.version>
    </properties>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.13</version>
    </parent>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-accession-core</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-accession-ws</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-accession-pipeline</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-accession-release</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-remapping-get-source</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-accession-deprecate</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-accession-import-dbsnp2</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-accession-clustering</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-remapping-ingest</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>uk.ac.ebi.ampt2d</groupId>
                <artifactId>accession-commons-mongodb</artifactId>
                <version>${accession-commons-version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.ampt2d</groupId>
                <artifactId>accession-commons-monotonic-generator-jpa</artifactId>
                <version>${accession-commons-version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>variation-commons-core</artifactId>
                <version>${variation-commons-version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>variation-commons-batch</artifactId>
                <version>${variation-commons-version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>variation-commons-beacon</artifactId>
                <version>${variation-commons-version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>variation-commons-mongodb</artifactId>
                <version>${variation-commons-version}</version>
            </dependency>
            <dependency>
                <groupId>uk.ac.ebi.eva</groupId>
                <artifactId>eva-metrics</artifactId>
                <version>${eva-metrics-version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.samtools</groupId>
                <artifactId>htsjdk</artifactId>
                <version>${samtools-htsjdk-version}</version>
            </dependency>
            <dependency>
                <groupId>com.thoughtworks.xstream</groupId>
                <artifactId>xstream</artifactId>
                <version>1.4.21</version>
            </dependency>
            <dependency>
                <groupId>org.springdoc</groupId>
                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
                <version>${springdoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-annotations</artifactId>
                <version>2.2.47</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <!--https://docs.spring.io/spring-boot/docs/1.5.3.RELEASE/reference/html/configuration-metadata.html#
            configuration-metadata-annotation-processor-->
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>mongodb</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>cloudsmith</id>
            <url>https://dl.cloudsmith.io/public/ebivariation/packages/maven/</url>
            <releases>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </releases>
            <snapshots>
                <enabled>true</enabled>
                <updatePolicy>always</updatePolicy>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <snapshotRepository>
            <id>cloudsmith</id>
            <url>https://maven.cloudsmith.io/ebivariation/packages/</url>
        </snapshotRepository>
        <repository>
            <id>cloudsmith</id>
            <url>https://maven.cloudsmith.io/ebivariation/packages/</url>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <reuseForks>false</reuseForks>
                        <argLine>
                            --add-opens java.base/java.time=ALL-UNNAMED
                            --add-opens java.base/java.lang=ALL-UNNAMED
                            --add-opens java.base/java.util=ALL-UNNAMED
                        </argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <delimiters>
                        <!-- Provide a delimiter that doesn't clash with Spring ${} placeholders nor @ in URLs -->
                        <delimiter>|</delimiter>
                    </delimiters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                    <showDeprecation>true</showDeprecation>
                    <showWarnings>true</showWarnings>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.github.git-commit-id</groupId>
                <artifactId>git-commit-id-maven-plugin</artifactId>
                <version>9.0.1</version>
                <configuration>
                    <includeOnlyProperties>
                        <includeOnlyProperty>^git.tags$</includeOnlyProperty>
                        <includeOnlyProperty>^git.commit.id$</includeOnlyProperty>
                        <includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
                        <includeOnlyProperty>^git.commit.id.describe$</includeOnlyProperty>
                        <includeOnlyProperty>^git.commit.message.full$</includeOnlyProperty>
                        <includeOnlyProperty>^git.commit.time$</includeOnlyProperty>
                    </includeOnlyProperties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.6.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>